# immunos

./: .claudeignore  .gitignore  .gitmodules  HOME.md  IMMUNOS_QUICKSTART.md  IMMUNOS_STARTUP_GUIDE.md  INDEX.md  MULTI_MODEL_SYSTEM_COMPLETE.md  NEXT_SESSION.md  OBSIDIAN_VAULT.md  OBSIDIAN_WORKSPACES.md  OPUS_IMMUNOS_REVIEW_SUMMARY.md  OPUS_SUBMISSION_INSTRUCTIONS.md  README.md  blog_article_immunos_dashboard.md  claude.md  opus_review_package.md  projects.code-workspace  pyproject.toml  start-immunos.sh
.obsidian/: graph.json  workspace.json
biobitworks-logistics/: GOOGLE_DRIVE_SYNC.md  README.md
daily/: 2025-11-30.md  2025-12-02.md  2025-12-03.md  2025-12-04.md  2025-12-11.md  2025-12-12.md  2025-12-13.md  2025-12-18.md  2025-12-21.md  2025-12-22.md  2025-12-23.md  2025-12-24.md  2025-12-25.md  README.md
data/: README.md
docs/: Continue-Usage-Tips.md  README.md  VS-Code-LLM-Integration.md  VS-Code-LLM-Manual-Setup.md  VS-Code-LLM-Quick-Reference.md  immunos-dashboard-review.md  immunos-phased-plan.md  immunos-references.md  training-eval-2025-12-22-research-ollama-bge-m3-kfold.md  training-eval-2025-12-22-research-ollama-evidence-embed.md  training-eval-2025-12-22-research-ollama-evidence-hybrid09.md  training-eval-2025-12-22-research-ollama-evidence-rha.md  training-eval-2025-12-22-research-ollama-evidence-unbalanced.md  training-eval-2025-12-22-research-ollama-evidence.md  training-eval-2025-12-22-research-ollama-mxbai-evidence-test.md  training-eval-2025-12-22-research-ollama-mxbai-evidence.md  training-eval-2025-12-22-research-ollama-mxbai-evidence5.md  (+13 more)
(+2067 files in other folders)
