[project]
name = "byron-projects"
version = "1.0.0"
description = "Master workspace for all software engineering projects"
authors = [{name = "Byron"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.7.post0",
]

[tool.uv.workspace]
members = ["immunos81", "immunos-mcp", "rockbeatspaper"]

[tool.uv.sources]
verifiers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
